<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/developer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_name"/>
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/developer_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer_name"
        android:text="@string/developer_mobile_phone"/>
    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:id="@+id/developer_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developer_mobile"
        android:text="@string/developer_email"/>
</RelativeLayout>