<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">
    <ImageView
        android:id="@+id/login_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@mipmap/back_button"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:id="@+id/login_tab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="33dp"
        android:layout_marginTop="80dp"/>
    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="#fb0b16"

        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"

        android:layout_below="@+id/login_tab"
        android:layout_marginTop="60dp"/>
    
    <RelativeLayout
        android:id="@+id/login_1"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@color/login_bg"
       android:layout_below="@+id/error"
        android:layout_centerHorizontal="true"

     >
        <ImageView
            android:id="@+id/user_phone_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/user_phone"
            android:layout_centerVertical="true"
            />
        <EditText
            android:id="@+id/user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:hint="@string/user_phone"
            android:textColorHint="@color/user_name"
            android:layout_toRightOf="@+id/user_phone_icon"
            android:background="@null"
            android:layout_marginLeft="2dp"
            android:maxLength="23"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/login_2"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@color/login_bg"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_1"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:id="@+id/user_psd_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/password_icon"
            android:layout_centerVertical="true"
            />
        <EditText
            android:id="@+id/user_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_centerVertical="true"
            android:hint="@string/user_password"
            android:textColorHint="@color/user_name"
            android:layout_toRightOf="@+id/user_psd_icon"
            android:background="@null"
            android:layout_marginLeft="2dp"
            android:maxLength="17"
            />
      <Button
          android:id="@+id/forget_password"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/forget_psd"
          android:textColor="@color/white"
          android:background="@color/transparent"
          android:layout_alignParentRight="true"/>

    </RelativeLayout>
    <Button
        android:id="@+id/login_button"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:background="@color/login_bg"
        android:text="@string/login_user_name"
        android:layout_below="@+id/login_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@color/user_name"
        />
    <Button
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:text="@string/register_phone"
       android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/login_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_below="@+id/login_register"
        android:text="@string/register_third"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>
    <ImageView
        android:id="@+id/weixin_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/weixin"
        android:layout_below="@+id/login_3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:id="@+id/qq_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/qq"
        android:layout_toLeftOf="@+id/weixin_login"
        android:layout_below="@+id/login_3"
        android:layout_marginTop="10dp"
        />
    <ImageView
        android:id="@+id/weibo_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@mipmap/weibo"
        android:layout_toRightOf="@+id/weixin_login"
        android:layout_below="@+id/login_3"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>